# com.jgdigital.ocr

./: Bbsnn.ba  README.md  pubspec.yaml
.github/workflows/: flutter-android.yml
android/app/src/main/java/com/jgdigital/ocr/: MainActivity.java  OCRNative.java
android/src/main/cpp/: CMakeLists.txt  ocr.cpp
assets/tessdata/: eng.traineddata
lib/: main.dart
